--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "dev_ws/src/facial_features"]
-	path = dev_ws/src/facial_features
-	url = https://github.com/raviranjan0309/Detect-Facial-Features
+[submodule "dev_ws/src/background_removal"]
+	path = dev_ws/src/background_removal
+	url = git@github.com:pythonlessons/background_removal.git
