--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -29,6 +29,14 @@ RUN apt-get update && apt-get install -y \
     software-properties-common \
     tar \
     wget \ 
+    libgl1-mesa-glx \
+    ffmpeg \ 
+    libsm6 \
+    libxext6 \
+    htop \
+    unzip \ 
+    # For converting fucking iphone files//photos
+    libheif-examples \
     # Install Docker CE CLI
     && curl -fsSL https://download.docker.com/linux/$(lsb_release -is | tr '[:upper:]' '[:lower:]')/gpg | (OUT=$(apt-key add - 2>&1) || echo $OUT) \
     && add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/$(lsb_release -is | tr '[:upper:]' '[:lower:]') $(lsb_release -cs) stable" \
@@ -60,6 +68,7 @@ RUN \
     tqdm \
     onnxruntime \ 
     tf2onnx \
+    black \
     tensorflow==2.*
 
 # -----------------------------------------------------------------------------
