--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "dev_ws/src/background_removal"]
 	path = dev_ws/src/background_removal
-	url = git@github.com:pythonlessons/background_removal.git
+	url = https://github.com/pythonlessons/background_removal.git
